// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectsPage Pull 1`] = `
<DocumentFragment>
  <div
    class="projects-page"
  >
    <div
      class="pullable sc-bdVaJa gOhiQX"
      height="72"
      style="height: 72px; align-items: center; transition: none;"
    >
      <div
        class="sc-bwzfXH jKOUWm"
        style="opacity: 1; transform: translateY(0px) rotate(90deg); transition: none;"
      >
        <svg
          class="sc-htpNat KtFsv"
          fill="none"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          style="width: 24px; height: 24px; stroke: #000000; animation: iuniob 200ms cubic-bezier(0.55, 0.055, 0.675, 0.19), iVXCSc 1200ms linear 200ms infinite;"
          viewBox="0 0 24 24"
        >
          <line
            x1="12"
            x2="12"
            y1="2"
            y2="6"
          />
          <line
            x1="12"
            x2="12"
            y1="18"
            y2="22"
          />
          <line
            x1="4.93"
            x2="7.76"
            y1="4.93"
            y2="7.76"
          />
          <line
            x1="16.24"
            x2="19.07"
            y1="16.24"
            y2="19.07"
          />
          <line
            x1="2"
            x2="6"
            y1="12"
            y2="12"
          />
          <line
            x1="18"
            x2="22"
            y1="12"
            y2="12"
          />
          <line
            x1="4.93"
            x2="7.76"
            y1="19.07"
            y2="16.24"
          />
          <line
            x1="16.24"
            x2="19.07"
            y1="7.76"
            y2="4.93"
          />
        </svg>
      </div>
    </div>
    <div
      class="projects-page__refresh"
    >
      <img
        src="test-file-stub"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProjectsPage Render 1`] = `
<DocumentFragment>
  <div
    class="projects-page"
  >
    <div
      class="pullable sc-bdVaJa gOhiQX"
      height="0"
      style="height: 0px; align-items: center; transition: none;"
    >
      <div
        class="sc-bwzfXH jKOUWm"
        style="opacity: 0; transform: translateY(-24px) rotate(0deg); transition: none;"
      >
        <svg
          class="sc-htpNat KtFsv"
          fill="none"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          style="width: 24px; height: 24px; stroke: #000000; animation: none;"
          viewBox="0 0 24 24"
        >
          <line
            x1="12"
            x2="12"
            y1="2"
            y2="6"
          />
          <line
            x1="12"
            x2="12"
            y1="18"
            y2="22"
          />
          <line
            x1="4.93"
            x2="7.76"
            y1="4.93"
            y2="7.76"
          />
          <line
            x1="16.24"
            x2="19.07"
            y1="16.24"
            y2="19.07"
          />
          <line
            x1="2"
            x2="6"
            y1="12"
            y2="12"
          />
          <line
            x1="18"
            x2="22"
            y1="12"
            y2="12"
          />
          <line
            x1="4.93"
            x2="7.76"
            y1="19.07"
            y2="16.24"
          />
          <line
            x1="16.24"
            x2="19.07"
            y1="7.76"
            y2="4.93"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
